--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,5 @@
 [pytest]
 addopts = --strict-markers
 markers =
-    smoke: marker for smoke tests
-    regression: marker for regression tests
-    win10
-    beta_users
-    passwords
+    need_to_test
+    password
